# eagerx_dcsc_setups

./: .gitignore  CHANGELOG.md  Makefile  README.rst  pyproject.toml
cfg/: eval.yaml  train.yaml
eagerx_dcsc_setups/: __init__.py  create_graphs.py  eval.py  plot_results.py  record.py  train.py
eagerx_dcsc_setups/pendulum/: __init__.py  converters.py  envs.py  nodes.py  objects.py  overlay.py  pid.py  processors.py
eagerx_dcsc_setups/pendulum/gym/: engine_nodes.py  engine_states.py  processor.py
eagerx_dcsc_setups/pendulum/ode/: __init__.py  engine_nodes.py  engine_states.py  pendulum_ode.py  pendulum_render.py
eagerx_dcsc_setups/pendulum/real/: __init__.py  engine_nodes.py  engine_states.py
examples/: eval_graph.yaml  example_gym.py  example_ode.py  example_real.py  example_tuning.py  example_tuning_real.py  gui_example.py
experiments/: main.py  real.py  render.py  sim.py  util.py
exps/eval/runs/baseline_gym_0/: eval.yaml
exps/eval/runs/baseline_gym_1/: eval.yaml
exps/eval/runs/baseline_gym_2/: eval.yaml
exps/eval/runs/baseline_gym_3/: eval.yaml
exps/eval/runs/baseline_gym_4/: eval.yaml
exps/eval/runs/baseline_ode_0/: eval.yaml
exps/eval/runs/baseline_ode_1/: eval.yaml
exps/eval/runs/baseline_ode_2/: eval.yaml
exps/eval/runs/baseline_ode_3/: eval.yaml
exps/eval/runs/baseline_ode_4/: eval.yaml
exps/eval/runs/delay_0/: eval.yaml
exps/eval/runs/delay_1/: eval.yaml
exps/train/graphs/: graph_baseline_gym.yaml  graph_delay.yaml
tests/: test_eagerx_dcsc_setups.py
tutorial/: demo.py  eval_policy.py  evaluate_policy.py
(+29 files in other folders)
