[tool.poetry]
name = "eagerx_dcsc_setups"
version = "0.1.11"
license = "Apache2.0"
description = "EAGERx interface to dcsc_setups."
authors = ["Jelle Luijkx <j.d.luijkx@tudelft.nl>", "Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_dcsc_setups"
repository = "https://github.com/eager-dev/eagerx_dcsc_setups"
documentation = "https://eagerx.readthedocs.io/en/master/"

[tool.poetry.dependencies]
python = "^3.8"
stable-baselines3 = "^1.2.0"
eagerx = "^0.1.24"
eagerx-gui = "^0.2.5"
eagerx-ode = "^0.1.12"
eagerx-reality = "^0.1.7"
tensorboard = "^2.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1"
pytest-cov = "^3.0.0"
flake8= ">=3"
flake8-bugbear = "^22.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_dcsc_setups/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
